--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Chess Game</title>
   </head>
   <body>
-    <!-- <p id="score">Score: 0</p> -->
     <canvas></canvas>
+    <img id="pieces" src="/img/pieces.png" />
     <script type="module" src="/dist/app-bundle.js"></script>
   </body>
 </html>
