add moving pieces around

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Chess Game</title>
   </head>
   <body>
+    <p id="current_player">Current Player: White</p>
     <canvas></canvas>
     <img id="pieces" src="/img/pieces.png" />
     <script type="module" src="/dist/app-bundle.js"></script>
