--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Chess Game</title>
   </head>
   <body>
-    <p id="current_player">Current Player: White</p>
+    <div id="current_player">
+      <p>Current Player:</p>
+      <div id="current_player_color"></div>
+    </div>
     <canvas></canvas>
     <img id="pieces" src="/img/pieces.png" />
     <script type="module" src="/dist/app-bundle.js"></script>
