--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Chess Game</title>
   </head>
   <body>
+    <button id="dev-button">Log!</button>
     <div id="current_player" class="flex-center">
       <p>Current Player:</p>
       <div id="current_player_color"></div>
