add feature sound

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
     <canvas></canvas>
     <img id="pieces" src="/img/pieces.png" />
+    <audio src="/sound/public_sound_standard_Move.mp3"></audio>
+    <audio src="/sound/public_sound_standard_Capture.mp3"></audio>
     <script type="module" src="/dist/app-bundle.js"></script>
   </body>
 </html>
