--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
+    <link href="/img/favicon.ico" rel="icon" type="image/x-icon" />
     <title>Chess Game</title>
   </head>
   <body>
