--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         ></path></svg
     ></a>
 
-    <button id="dev-button">Log!</button>
+    <!-- TODO dev only logger -->
+    <!-- <button id="dev-button">Log!</button> -->
+
     <div id="current_player" class="flex-center">
       <p>Current Player:</p>
       <div id="current_player_color"></div>
